--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyMoney">
-        <activity android:name=".Register2Activity"></activity>
+        <activity android:name=".Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Register2Activity" />
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
