--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyMoney">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".RecurringBills"></activity>
+        <activity android:name=".Profile" />
+        <activity android:name=".expenseGoal2" />
+        <activity android:name=".ExpenseGoal" />
+        <activity android:name=".ExpenseTracker" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
