--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyMoney">
-        <activity android:name=".RecurringBills"></activity>
+        <activity android:name=".AddIncome"></activity>
+        <activity android:name=".AddSavings" />
+        <activity android:name=".AddExpense" />
+        <activity android:name=".RecurringBills" />
         <activity android:name=".Profile" />
         <activity android:name=".expenseGoal2" />
         <activity android:name=".ExpenseGoal" />
