--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -17,13 +17,11 @@
         <activity android:name=".expenseGoal2" />
         <activity android:name=".ExpenseGoal" />
         <activity android:name=".ExpenseTracker" />
-        <activity android:name=".LoginActivity" />
         <activity android:name=".Splash" />
         <activity android:name=".RecurringBillsCalendar" />
-        <activity android:name=".AddExpense" >
+        <activity android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
