--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -9,30 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyMoney">
-        <activity android:name=".BigExpense_setup"></activity>
-        <activity android:name=".MonthlyReport" />
-        <activity android:name=".BigExpenses_thirdOption" />
-        <activity android:name=".BigExpenses_secondOption" />
-        <activity android:name=".BigExpenses_firstOption" />
-        <activity android:name=".BigExpenses_main" />
+        <activity android:name=".AddIncome"></activity>
+        <activity android:name=".AddSavings" />
+        <activity android:name=".AddExpense" />
         <activity android:name=".RecurringBills" />
         <activity android:name=".Profile" />
         <activity android:name=".expenseGoal2" />
         <activity android:name=".ExpenseGoal" />
         <activity android:name=".ExpenseTracker" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".Splash">
+        <activity android:name=".Splash" />
+        <activity android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Register2Activity" />
         <activity android:name=".RegisterActivity" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
 
         <meta-data
             android:name="com.google.android.actions"
