--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -18,18 +18,17 @@
         <activity android:name=".expenseGoal2" />
         <activity android:name=".ExpenseGoal" />
         <activity android:name=".ExpenseTracker" />
-        <activity android:name=".Splash" />
-        <activity android:name=".RecurringBillsCalendar" />
-        <activity android:name=".LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".Splash" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+        <activity android:name=".RecurringBillsCalendar" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".Register2Activity" />
         <activity android:name=".RegisterActivity" />
-
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/gradient" />
@@ -39,11 +38,11 @@
 
         <activity android:name=".WelcomeActivity" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
