--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyMoney">
-        <activity android:name=".UpdatePassword"></activity>
+        <activity android:name=".RecurringBillsCalendar"></activity>
+        <activity android:name=".UpdatePassword" />
         <activity android:name=".AddIncome" />
         <activity android:name=".AddSavings" />
         <activity android:name=".AddExpense" />
@@ -18,17 +19,17 @@
         <activity android:name=".expenseGoal2" />
         <activity android:name=".ExpenseGoal" />
         <activity android:name=".ExpenseTracker" />
-        <activity android:name=".Splash" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".RecurringBillsCalendar" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".Register2Activity" />
         <activity android:name=".RegisterActivity" />
+
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/gradient" />
@@ -38,11 +39,13 @@
 
         <activity android:name=".WelcomeActivity" />
         <activity android:name=".MainActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
