--- a/EasyMoney/app/src/main/AndroidManifest.xml
+++ b/EasyMoney/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".Profile" />
         <activity android:name=".expenseGoal2" />
         <activity android:name=".ExpenseGoal" />
+        <activity android:name=".BigExpense_setup" />
+        <activity android:name=".BigExpenses_loan" />
+        <activity android:name=".BigExpenses_main" />
         <activity android:name=".ExpenseTracker" />
         <activity android:name=".Splash">
             <intent-filter>
